# dtc-de-zoomcamp-2026

./: .gitignore
01-docker-terraform/: .dockerignore  .env.example  01-README.md  Makefile  docker-compose.yml  main.py  pyproject.toml
01-docker-terraform/docker_ingestion_pipeline/: Dockerfile  __init__.py  config.py
01-docker-terraform/docker_ingestion_pipeline/core/: ingestion_pipeline.py
01-docker-terraform/docker_ingestion_pipeline/db/: client.py  loader_csv.py  loader_parquet.py  loader_tsv.py  lock.py  optimize.py  schema.py  swapper.py  validator_repo.py
01-docker-terraform/docker_ingestion_pipeline/ports/: database.py  loader.py  lock.py  optimize.py  schema.py  swapper.py  validator.py
01-docker-terraform/docker_ingestion_pipeline/utils/: datetime_fix.py  downloader.py  file_types.py  identifiers.py  progress.py
01-docker-terraform/terraform/: main.tf
02-workflow-orchestration/: .env.example  02-README.md  docker-compose.yml
02-workflow-orchestration/flows/01_ingestion/: backfill_months_for_taxi.yml  backfill_multi_taxi.yml  ingest_ny_taxi.yml
02-workflow-orchestration/flows/02_ops/: schedule_timezone_newyork.yml
02-workflow-orchestration/homework/: homework_02.sql
03-data-warehouse/: .env.example  03-README.md  main.py  pyproject.toml  run_all.sh
03-data-warehouse/apps/: download_to_gcs.py  run_sql.py
03-data-warehouse/decisions/: 0001-why-terraform.md  0002-table-layering-strategy.md  0003-partition-and-clustering.md  0004-gcs-bucket-module-configuration.md  0005-multistatement-sql-runner.md
03-data-warehouse/infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
03-data-warehouse/infra/terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
03-data-warehouse/infra/terraform/modules/gcs_bucket/: main.tf  outputs.tf  variables.tf
03-data-warehouse/sql/: 00_create_datasets.sql  00_dataset_sanity.sql  01_create_external_table.sql  02_create_base_table.sql  03_create_optimized_table.sql  04_dataset_sanity.sql  04_homework_queries.txt
03-data-warehouse/src/dw03/adapters/: bq_client.py  gcs_client.py
03-data-warehouse/src/dw03/config/: __init__.py  settings.py
03-data-warehouse/src/dw03/pipelines/: bq_run_sql.py  gcs_ingest.py
03-data-warehouse/src/dw03/runtime/: http_session.py  retry.py  setup_loging.py  sql_template.py
