# pyproject.toml

[project]
name = "dtc-de-2026-module-03-data-warehouse"
version = "0.1.0"
description = "Module 03 - GCS + BigQuery (NYC Taxi) scripts"
readme = "03-README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "loguru>=0.7",
  "google-cloud-storage>=2.14",
  "google-cloud-bigquery>=3.0",
  "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
  "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dw03"]
